# aoc2020

./: Cargo.toml
src/: main.rs
src/day1/: main.rs
src/day10/: main.rs  main_faster.rs
src/day11/: main.rs  main_part1_simd.rs  mod.rs  test  vec2d.rs
src/day12/: main.rs
src/day13/: main.rs
src/day14/: main.rs
src/day15/: main.rs
src/day16/: example2  main.rs
src/day17/: gridmd.rs  gridmd_iterator.rs  main.rs  mod.rs
src/day18/: main_part1.rs  main_part2.rs  mod.rs
src/day19/: main_part1.rs  main_part2.rs  mod.rs  test
src/day2/: main.rs
src/day20/: main.rs
src/day21/: main.rs
src/day22/: main.rs
src/day23/: main.rs
src/day24/: main.rs
src/day25/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs  main_faster.rs  mod.rs
src/day8/: main.rs  main_faster.rs
src/day9/: main.rs
src/infinl/: main.rs
src/template/: main.rs
