[package]
name = "aoc2020"
version = "0.1.0"
authors = ["JonathanBrouwer"]
edition = "2018"

[profile.bench]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
lto = false
debug = true

[dependencies]
bit-array = "0.4.4"
typenum = "1.12.0"
rayon = "1.5.0"
scan_fmt = "0.2.5"
lazy_static = "1.4.0"
petgraph = "0.5.1"
itertools = "0.9.0"
strum = "0.20.0"
strum_macros = "0.20"
bitvec = "0.19.4"
packed_simd_2 = "0.3.4"
mcmf = "2.0.0"
integer-sqrt = "0.1.5"
nalgebra = "0.23.2"